# miniclip

./: CMakeLists.txt
include/puyo/common/: log.hpp
include/puyo/game/components/gameplay/: belonging_chain.hpp  chains.hpp  color.hpp  falling.hpp  grid.hpp  pair.hpp  score.hpp  state.hpp
include/puyo/game/components/graphics/: drawable.hpp
include/puyo/game/components/movement/: transform.hpp  velocity.hpp
include/puyo/game/core/: constants.hpp  engine.hpp  game.hpp  graphics.hpp  input.hpp  semi_fixed_game_loop.hpp
include/puyo/game/core/ecs/: component.hpp  component_array.hpp  component_manager.hpp  coordinator.hpp  entity.hpp  entity_manager.hpp  signature.hpp
include/puyo/game/ctx/: binds.hpp
include/puyo/game/systems/gameplay/: add_falling_pair.hpp  check_lose.hpp  clear_chains.hpp  clear_falling.hpp  destroy_pair.hpp  filter_chains.hpp  find_combos.hpp  spawn_pair.hpp
include/puyo/game/systems/general/: reset_entities.hpp
include/puyo/game/systems/graphics/: render_grid.hpp
include/puyo/game/systems/input/: handle_general_input.hpp  handle_pair_input.hpp
include/puyo/game/systems/movement/: fall_pieces.hpp  try_move_pair.hpp
include/puyo/wrapper/: lib.hpp
include/puyo/wrapper/events/: base_event.hpp  event.hpp  event_type.hpp  keyboard_event.hpp  quit_event.hpp  user_event.hpp  window_event.hpp
include/puyo/wrapper/fonts/: font.hpp  font_cache.hpp  unicode_string.hpp
include/puyo/wrapper/graphics/: color.hpp  enums.hpp  renderer.hpp  screen.hpp  surface.hpp  texture.hpp  window.hpp
include/puyo/wrapper/input/: button_state.hpp  key_code.hpp  keyboard.hpp  scan_code.hpp
include/puyo/wrapper/math/: area.hpp  point.hpp  rect.hpp
main/: main.cpp
src/common/: log.cpp
src/game/core/: game.cpp  graphics.cpp
